# stackdump

./: CHANGELOG.md  Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  publish.ps1
.github/workflows/: ci.yml
capture/: Cargo.toml  README.md  build.rs
capture-probe/: Cargo.toml  README.md
capture-probe/src/: lib.rs
capture/src/: avr.rs  cortex_m.rs  lib.rs
capture/src/cortex_m/: fpu_registers.rs  mod.rs  registers.rs  stack.rs
cli/: Cargo.toml  README.md
cli/src/: logging.rs  main.rs  probe.rs
core/: Cargo.toml  README.md
core/src/: device_memory.rs  lib.rs  memory_region.rs  register_data.rs
examples/: create_nrf52840_debug_stackdump.ps1  create_nrf52840_stackdump.ps1
examples/data/: nrf52840  nrf52840.dump
examples/data/fuzzing/: timeout-61d28ea075b2ad7cca2076b488e4c768771edf80.dump  timeout-61d28ea075b2ad7cca2076b488e4c768771edf80.elf
examples/nrf52840/: Cargo.toml  Embed.toml  memory.x
examples/nrf52840/.cargo/: config.toml
examples/nrf52840/src/: main.rs
trace/: Cargo.toml  README.md
trace/fuzz/: Cargo.toml
trace/fuzz/fuzz_targets/: cortex_m_dump_fuzz.rs
trace/src/: cortex_m.rs  error.rs  gimli_extensions.rs  lib.rs  render_colors.rs
trace/src/cortex_m/: mod.rs  variables.rs
trace/src/platform/: avr.rs  mod.rs  variables.rs
trace/src/platform/cortex_m/: mod.rs
trace/src/type_value_tree/: mod.rs  rendering.rs  value.rs  variable_type.rs
trace/src/variables/: mod.rs
trace/src/variables/type_value_tree_building/: array.rs  base_type.rs  const_type.rs  enumeration.rs  mod.rs  object.rs  pointer.rs  tagged_union.rs  typedef.rs  volatile_type.rs
