[package]
name = "stackdump-capture-probe"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "README.md"
keywords = ["no_std", "stackdump"]
categories = ["embedded", "no-std"]
description = "Crate for capturing stack dumps of embedded devices with a debugging probe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# probe-rs = { git = "https://github.com/probe-rs/probe-rs", rev = "2fa97dc" }
probe-rs = "0.12"
stackdump-core = { version = "0.2.0", path = "../core" }

