[package]
name = "stackdump-capture-probe"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "README.md"
keywords = ["no_std", "stackdump"]
categories = ["embedded", "no-std"]
description = "Crate for capturing stack dumps of embedded devices with a debugging probe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.29.1"
stackdump-core = { version = "0.10.3", path = "../core" }

