[package]
name = "stackdump-capture"
version.workspace = true
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "README.md"
keywords = ["no_std", "stackdump"]
categories = ["embedded", "no-std"]
description = "Crate for capturing stack dumps"

[dependencies]
stackdump-core = { version = "0.10.1", path = "../core", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
