[package]
name = "stackdump-cli"
version = "0.1.4"
edition = "2021"
rust-version = "1.59"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "README.md"
keywords = ["no_std", "stackdump"]
categories = ["embedded", "no-std"]
description = "Crate for capturing stack dumps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.2", features = ["derive", "color", "suggestions"] }
stackdump-trace = { version = "0.2.0", path = "../trace" }
stackdump-capture-probe = { version = "0.1.0", path = "../capture-probe" }
simple_logger = "2.1.0"
log = "0.4.14"
textwrap = { version = "0.15", features = ["terminal_size"] }
colored = "2"
probe-rs = "0.12"
