[package]
name = "stackdump-cli"
version = "0.1.8"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "README.md"
keywords = ["no_std", "stackdump"]
categories = ["embedded", "no-std"]
description = "Crate for capturing stack dumps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "color", "suggestions"] }
stackdump-trace = { version = "0.4.0", path = "../trace" }
stackdump-capture-probe = { version = "0.4.0", path = "../capture-probe" }
env_logger = "0.10"
log = "0.4.14"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
colored = "2"
probe-rs = "0.20.0"
