[package]
name = "stackdump-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "../README.md"
keywords = ["no_std", "stackdump"]
categories = ["embedded", "no-std"]
description = "Crate for stack dump definitions"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false, features = ["serde"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
gimli = { version = "0.26.1", optional = true }

[features]
std = ["arrayvec/std", "gimli", "serde/std"]
default = ["std"]
