[package]
name = "stackdump-core"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "README.md"
keywords = ["no_std", "stackdump"]
categories = ["embedded", "no-std"]
description = "Crate for stack dump definitions"

[dependencies]
arrayvec = { version = "0.7.2", default-features = false, features = ["serde"] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
gimli = { version = "0.26.1", default-features = false }
funty = { version = "2.0.0", default-features = false }

[features]
std = ["arrayvec/std", "serde/std"]
default = ["std"]
