[package]
name = "stackdump-trace"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tweedegolf/stackdump"
repository = "https://github.com/tweedegolf/stackdump"
readme = "README.md"
keywords = [ "stackdump"]
categories = ["embedded"]
description = "Crate for tracing stack dumps"

[dependencies]
addr2line = "0.25.0"
gimli = "0.32.0"
object = "0.37.1"
bitvec = "1.0.0"
stackdump-core = { version = "0.4.0", path = "../core" }
thiserror = "2.0.12"
log = "0.4.14"
trees = "0.4.2"
colored = "3.0.0"
phf = { version = "0.12.1", features = ["macros"] }
funty = { version = "2.0.0", default-features = false }
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
simple_logger = "5.0.0"
